--- a/unit-project/project-1/starter-code/project1-starter.ipynb
+++ b/unit-project/project-1/starter-code/project1-starter.ipynb
@@ -98,7 +98,7 @@
     "admit | 0 = not admitted, 1 = admitted | categorical\n",
     "gre | GRE score | continuous \n",
     "gpa | Grade Point Average | continuous\n",
-    "prestige | rank value from 1 (highest) to 4 (lowest) of candidate's alma mater's prestige | continuous\n"
+    "prestige | rank value from 1 (highest) to 4 (lowest) of candidate's alma mater's prestige | categorical\n"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Determine whether a candidate will likely be admitted "
+    "Answer: Determine whether a candidate will likely be admitted, based on GRE, GPA, and prestige of alma mater "
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: GRE score, GPA, prestige of alma mater"
+    "Answer: GRE score, GPA, prestige of alma mater, admittance"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: Generate a histogram on gpa, gre, prestige, and admit"
+    "Answer: Generate a histogram on gpa, gre, prestige, and admit or run describe() on a DataFrame of data to view basic stats including mean, median, mode, and 25%, 50%, 75%, etc"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: Outliers may distort simple analysis such as using mean independantly to represent a population"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Plot data in a box plot"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: Collinearity is the linear relationship between two variable.  Do movement of both variables move in the separate direction or divergent direction?"
    ]
   },
   {
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Plot the values on a graph"
    ]
   },
   {
